# talk2data

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.mcp_agentic  Dockerfile.mcp_nl2sql  MICROSERVICES_GUIDE.md  README.md  agentic_tools_mcp_server.py  docker-compose.yml  nl2sql_mcp_server.py  pyproject.toml  run_local.sh
app/: agent.py  api.py  app_settings.py  config.py  database.py  main.py  mcp_manager.py  tool_description.py  tool_visibility.py
app/services/: title_generator.py
docs/: DEPLOYMENT_OCI.md  NL2SQL_MCP_SERVER.md
scripts/: cleanup_old_conversations.py  debug_oracle_insert.py  drop_tables.py  fix_identities.py  fix_oracle_identity.py  migrate_sqlite_to_oracle.py  migrate_t2e_to_t2ddev.py  oracledbtest.py  test_db.py
web/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/app/: HomeContent.tsx  globals.css  layout.tsx  page.tsx
web/app/api/[[...path]]/: route.ts
web/app/components/: ArtifactRenderer.tsx  ChatInterface.tsx  Header.tsx  PaginatedTable.tsx  Sidebar.tsx  VegaLiteEmbed.tsx
web/app/contexts/: ApiConfigContext.tsx  NavigationContext.tsx  ThemeContext.tsx
web/app/settings/: page.tsx
